Fixed Recipe Print Not Showing Notes

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -28,6 +28,14 @@ body p { font-size:1rem; line-height:1.6; margin:0 0 1rem; padding:0; }
 .cooked-recipe-directions .cooked-direction.cooked-direction-has-number .cooked-dir-content { padding-left:2rem; }
 .cooked-recipe-directions .cooked-direction.cooked-direction-has-number-wide .cooked-dir-content { padding-left:2.75rem; }
 .cooked-recipe-directions .cooked-direction-number { opacity:0.35; position:absolute; display:inline-block; width:auto; height:1rem; line-height:1rem; font-weight:800; top:0; left:0; font-size:1.5rem; }
+.cooked-recipe-notes {
+	display:block; padding:0; margin:0 0 2rem;
+}
+
+.cooked-recipe-notes ol,
+.cooked-recipe-notes ul { padding-left: 1.5rem; }
+
+.cooked-recipe-notes .cooked-heading { margin:0 0 1rem; display:block; font-weight:600; font-size:1.25rem; line-height:1.5; }
 .cooked-recipe-excerpt { display:block; padding:0; margin:0 0 1rem; }
 .cooked-recipe-info { display:block; padding:0; margin:0 0 1rem; line-height:2.25rem; }
 .cooked-recipe-info > span, .cooked-recipe-info > section.cooked-left > span { line-height:1.3rem; position:relative; box-sizing:border-box; vertical-align:top; margin:0 2rem 1rem 0; font-size:0.85rem; display:inline-block; width:auto; }
